objects/ssot__Task__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityId__c</fullName>
        <label>Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToCalendarEventId__c</fullName>
        <label>Assigned To Calendar Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToId__c</fullName>
        <label>Assigned To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToObject__c</fullName>
        <label>Assigned To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedToUser__c</fullName>
        <label>Assigned To User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CallDurationInSeconds__c</fullName>
        <label>Call Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDateTime__c</fullName>
        <label>Completion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDateTime__c</fullName>
        <label>Due DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Task Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecurring__c</fullName>
        <label>IsRecurring</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReminderSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reminder Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoteText__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceDayOfMonthNumber__c</fullName>
        <label>Recurrence Day of Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceDayOfWeekNumber__c</fullName>
        <label>Recurrence Day of Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceEndDate__c</fullName>
        <label>Recurrence End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceInstanceNumber__c</fullName>
        <label>Recurrence Instance Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceMonthOfYearNumber__c</fullName>
        <label>Recurrence Month of Year Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceStartDate__c</fullName>
        <label>Recurrence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedItemId__c</fullName>
        <label>Related Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedItemObject__c</fullName>
        <label>Related Item Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedItemToId__c</fullName>
        <label>Related To Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToItemAccountId__c</fullName>
        <label>Related To Item Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToItemAssetId__c</fullName>
        <label>Related To Item Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReminderDateTime__c</fullName>
        <label>Reminder DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskAction__c</fullName>
        <label>Task Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskCallDisposition__c</fullName>
        <label>Task Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskCallType__c</fullName>
        <label>Task Call Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskPriority__c</fullName>
        <label>Task Priority</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceTimeUOM__c</fullName>
        <label>Task Recurrence Time Interval</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceTimeZone__c</fullName>
        <label>Task Recurrence Time Zone</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceType__c</fullName>
        <label>Task Recurrence Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskStatus__c</fullName>
        <label>Task Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskSubtype__c</fullName>
        <label>Task Subtype</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskType__c</fullName>
        <label>Task Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WhoId__c</fullName>
        <label>Who</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WhoObject__c</fullName>
        <label>Who Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTaskId__c</fullName>
        <label>Work Task</label>
        <length>36</length>
        <type>Text</type>
    </fields>
</CustomObject>